# python-playground

./: create-virtual.sh
ml-workshop/: .envrc  .gitignore  ice_lightning.py  requirement.txt
mnist/: .gitignore  README.md  nn.py  nn_lightning.py  requirement.txt
poetry-template/: pyproject.toml
try-ppxgboost/: README.md  pyproject.toml
try-ppxgboost/src/try_ppxgboost/: __init__.py  ucirepo.py
