[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["ras0q <ras0q@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
