[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["ras0q <ras0q@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.flake8]
max-line-length = 88

[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]
