[project]
name = "try-ppxgboost"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ras0q", email = "ras0q@users.noreply.github.com" }
]
dependencies = [
    "ucimlrepo>=0.0.7",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/try_ppxgboost"]
